# skd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gl_extras.cpp  gl_extras.h  layer_trace.cpp  layer_trace.h  main.cpp  make_fake_trace.cpp  make_test_layers_mskp.cpp  make_test_mskp.cpp  make_test_skp.cpp  replay_diag.h  replay_trace.cpp  skia_backend.cpp  skia_backend.h
.githooks/: pre-commit
.github/workflows/: release.yml
aosp/: CMakeLists.txt
aosp/ftl/include/ftl/details/: array_traits.h  future.h  hash.h  mixins.h  type_traits.h
aosp/libui/include/ui/: BlurRegion.h  ColorMode.h  ColorSpace.h  DebugUtils.h  FatVector.h  Fence.h  FenceTime.h  FrameRateCategoryRate.h  GraphicBuffer.h  GraphicTypes.h  LogicalDisplayId.h  PictureProfileHandle.h  ShadowSettings.h
aosp/renderengine/: CMakeLists.txt
aosp/renderengine/include/renderengine/: DisplaySettings.h  ExternalTexture.h  LayerSettings.h  PrintMatrix.h  RenderEngine.h
aosp/renderengine/include/renderengine/impl/: ExternalTexture.h
aosp/renderengine/src/: DesktopGLRenderEngine.cpp  DesktopGLRenderEngine.h
aosp/renderengine/src/skia/: ColorSpaces.cpp  SkiaDesktopGLRenderEngine.h
aosp/renderengine/src/skia/compat/: GaneshGpuContext.h  SkiaGpuContext.h
aosp/renderengine/src/skia/debug/: CaptureTimer.cpp  CommonPool.cpp  CommonPool.h  SkiaMemoryReporter.cpp
aosp/renderengine/src/skia/filters/: BlurFilter.h  GainmapFactory.cpp  GaussianBlurFilter.cpp  KawaseBlurDualFilter.cpp  LinearEffect.h  LutShader.cpp  MouriMap.h  StretchShaderFactory.cpp
aosp/shim/include/: com_android_graphics_libgui_flags.h  com_android_graphics_surfaceflinger_flags.h
aosp/shim/include/aidl/android/hardware/graphics/common/: Cta861_3.h  Hdr.h  Smpte2086.h
aosp/shim/include/aidl/android/hardware/graphics/composer3/: LutProperties.h
aosp/shim/include/android/: hardware_buffer.h
aosp/shim/include/android/hardware/graphics/common/1.0/: types.h
aosp/shim/include/android/hardware/graphics/common/1.2/: types.h
aosp/shim/include/common/: FlagManager.h  trace.h
aosp/shim/include/gui/: DisplayLuts.h  FenceMonitor.h
aosp/shim/include/hardware/: gralloc.h
aosp/shim/include/include/android/: GrAHardwareBufferUtils.h
aosp/shim/include/log/: log_main.h
aosp/shim/include/sync/: sync.h
